# VocalTrainer

Logic/: ApplicationModel.cpp  ApplicationModel.h  ApplicationModel.mm
Logic/AudioInput/: AudioInputReader.h
Logic/AudioInput/Android/: AAudioInputReader.cpp  AAudioInputReader.h
Logic/AudioInput/Apple/: AudioToolboxInputReader.cpp  AudioToolboxInputReader.h
Logic/AudioInput/PitchDetection/: SevaghPitchDetector.cpp  SevaghPitchDetector.h
Logic/BaseAudio/: AudioDeviceProvider.cpp  AudioStreamDescription.cpp
Logic/BaseAudio/Android/: AAudioStreamWrapper.cpp  AAudioStreamWrapper.h  AAudioUtils.cpp  AAudioUtils.h  AndroidAudioDeviceProvider.cpp  AndroidAudioDeviceProvider.h  AudioDeviceProvider.cpp  AudioDeviceProvider.h  AudioDeviceProviderProxy.h
Logic/Controllers/: ProjectController.h
Logic/Drawers/: OpenGLNvgDrawer.cpp  OpenGLNvgDrawer.h
Logic/FFT/: FFT.cpp  FFT.h
Logic/FFT/muFFT/: MuFFT.cpp  MuFFT.h
Logic/Logic.xcodeproj/: project.pbxproj
Logic/Manager/: AudioInputManager.cpp  AudioInputManager.h  MainController.cpp  MainController.h
Logic/Playback/Base/: AudioOutputWriter.h  BaseAudioPlayer.cpp  BaseAudioPlayer.h
Logic/Playback/Base/Android/: AAudioOutputWriter.cpp
Logic/Playback/Base/Apple/: AudioToolboxOutputWriter.cpp
Logic/Playback/Decoding/: AudioFilePlayer.h
Logic/Playback/Decoding/Decoder/: AndroidAudioDecoder.cpp  AndroidAudioDecoder.h  audiodecoder.cpp  audiodecoder.h  audiodecodercoreaudio_mac.cpp  audiodecodercoreaudio_mac.h  audiodecoderffmpeg.cpp  audiodecoderffmpeg.h
Logic/Playback/Mvx/: MvxFile.cpp  MvxFile.h  VocalTrainerFilePlayer.cpp
Logic/Playback/Vx/: VocalPart.h  VxFile.h
Logic/Workspace/: WorkspaceDrawer.cpp  WorkspaceDrawer.h
Qt/App/: Executors.cpp  VxApp.cpp  VxApp.h  VxAppUtils.cpp  VxAppUtils.h
Qt/Project/: ProjectWindow.cpp
Qt/Welcome/: WelcomeWindow.cpp
Qt/Workspace/Metal/: QMetalWidget.h  QMetalWidget.mm
QtVocalTrainer/: QtVocalTrainer.pro  qml.qrc  workspace.cpp  workspace.h
VocalTrainer/GLScene/: WorkspaceDrawer.cpp  WorkspaceDrawer.h
VocalTrainerAndroid/: gradle.properties  settings.gradle
VocalTrainerAndroid/AndroidUtils/: build.gradle
VocalTrainerAndroid/AndroidUtils/src/androidTest/java/com/neborosoft/androidutils/: ExampleInstrumentedTest.kt
VocalTrainerAndroid/AndroidUtils/src/main/: AndroidManifest.xml
VocalTrainerAndroid/AndroidUtils/src/main/java/com/neborosoft/androidutils/: AppUtils.kt  AssetUtils.kt  DimensionUtils.kt  ListExtensions.kt  VersionedApplication.kt
VocalTrainerAndroid/AndroidUtils/src/test/java/com/neborosoft/androidutils/: ExampleUnitTest.kt
VocalTrainerAndroid/Logic/: build.gradle
VocalTrainerAndroid/Logic/src/androidTest/java/com/neborosoft/vx/logic/: ExampleInstrumentedTest.kt
VocalTrainerAndroid/Logic/src/main/: AndroidManifest.xml
VocalTrainerAndroid/Logic/src/main/cpp/: AndroidApplicationModel.cpp  AndroidApplicationModel.h  AndroidApplicationModelFunctions.cpp  AndroidApplicationModelFunctions.h  AndroidApplicationModelFunctions.jni.cpp  AndroidProjectControllerDelegate.cpp  AndroidProjectControllerDelegate.h  AndroidWorkspaceDrawerResourcesProvider.cpp  AndroidWorkspaceDrawerResourcesProvider.h  CMakeLists.txt  Converters.cpp  Converters.h  CustomConverters.cpp  CustomConverters.h  FunctionCallsBridge.cpp  FunctionCallsBridge.h  JArray.cpp  JArray.h  JNIBridgeInit.h  JObject.cpp  JObject.h  JString.cpp  JString.h  JavaObject.h  KotlinConstructors.cpp  KotlinConstructors.h  ProjectControllerBridge.cpp  ProjectControllerBridge.h  ProjectControllerBridge.jni.cpp  ProjectControllerBridgeDelegate.cpp  ProjectControllerBridgeDelegate.h  RecordingsProviderBridge.cpp  RecordingsProviderBridge.h  SingingCompletionFlowBridge.cpp  SingingCompletionFlowBridge.h  SingingCompletionFlowBridge.jni.cpp  WorkspaceRenderer.cpp  WorkspaceRenderer.h  WorkspaceRenderer.jni.cpp  logic  (+1 more)
VocalTrainerAndroid/Logic/src/main/java/com/neborosoft/vx/logic/: AndroidApplicationModel.kt  AudioDeviceProvider.kt  LyricsSection.kt  ProjectController.kt  RecordingsProvider.kt  SingingCompletionFlowBridge.kt  SongTonality.kt  WorkspaceDrawerResourcesProvider.kt  WorkspaceRenderer.kt
VocalTrainerAndroid/Logic/src/test/java/com/neborosoft/vx/logic/: ExampleUnitTest.kt
VocalTrainerAndroid/app/: build.gradle
VocalTrainerAndroid/app/src/androidTest/java/com/neborosoft/vx/: ExampleInstrumentedTest.kt
VocalTrainerAndroid/app/src/main/: AndroidManifest.xml
VocalTrainerAndroid/app/src/main/java/com/neborosoft/vx/: MainActivity.kt  VocalTrainerApp.kt
VocalTrainerAndroid/app/src/main/java/com/neborosoft/vx/project/: ProjectActivity.kt  WorkspaceView.kt
VocalTrainerAndroid/app/src/main/res/layout/: activity_main.xml
VocalTrainerAndroid/app/src/main/res/values/: strings.xml  themes.xml
VocalTrainerAndroid/app/src/main/res/values-night/: themes.xml
VocalTrainerAndroid/app/src/test/java/com/neborosoft/vx/: ExampleUnitTest.kt
VocalTrainerAndroid/gradle/wrapper/: gradle-wrapper.properties
VocalTrainerApple/.build/debug/ModuleCache/10598HF3PZG0X/: CFNetwork-929P33Y1WR7E.pcm  CloudKit-3CP0MQ87BFYA5.pcm  CoreData-28TORBTAUVLEX.pcm  CoreFoundation-10I2D2XL7L7X9.pcm  CoreGraphics-1TH4RJJRQVFOC.pcm  CoreImage-3096MN6AT838P.pcm  CoreLocation-DJ7O04274VT4.pcm  CoreText-33OP6U69KUCI9.pcm  CoreVideo-3FAWVAJBVREGF.pcm  Dispatch-12O7S7HHQXK9N.pcm  FileProvider-2NY77GZB316YS.pcm  IOSurface-23REP5CSYWVMJ.pcm  ImageIO-1I03OOXLFD3W9.pcm  MachO-CA7UA9IK83JK.pcm  Metal-145CFU14FVBOZ.pcm  ObjectiveC-1KD62J152BYGO.pcm  OpenGLES-14DVTE3H3DXQF.pcm  QuartzCore-3I7S0M4UEAD0U.pcm  Security-1FYAMFTYLRNUK.pcm  SwiftOverlayShims-3A5RGGAXA7QR7.pcm  SwiftShims-3A5RGGAXA7QR7.pcm  SwiftUI-3TTMHA1ZU4GP0.pcm  UniformTypeIdentifiers-2U71ERD2B7X25.pcm  UserNotifications-3VWSNN2NTQF9Q.pcm  _Builtin_stddef_max_align_t-1KLO22F5ZEOA9.pcm  os-MI6WZSG1PNOM.pcm  os_object-MI6WZSG1PNOM.pcm  os_workgroup-MI6WZSG1PNOM.pcm  ptrauth-1KLO22F5ZEOA9.pcm
include/mlpack/core/dists/: discrete_distribution.hpp
include/mlpack/methods/hmm/: hmm_impl.hpp
